<resources>
    <string name="app_name">公園検索アプリ</string>
    <string name="title_activity_maps">公園検索アプリ</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="back">戻る</string>
    <string name="map">地図</string>
    <string name="search">検索</string>
    <string name="search_2">検索</string>
    <string name="search_3">検索</string>
    <string name="prefectures">都道府県</string>
    <string name="municipalities">市区町村</string>
    <string name="distance">距離 :</string>
    <string name="time">時間 :</string>
    <string name="Search">検索</string>
    <string name="no_match">No match found</string>
</resources>